policies/gatekeeper/constraint-namespace-fkm-region.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRegionLabel
metadata:
  name: fkm-namespace-must-have-region
spec:
  match:
    kinds:
      - apiGroups: [""]
        versions: ["v1"]
        kinds: ["Namespace"]
    labelSelector:
      matchLabels:
        app.kubernetes.io/part-of: feast-kfp-mlflow
  parameters:
    allowedRegions:
      - us
      - eu
